# nibbles

./: README.md  cmake-tools-kits.json
nibbles-01/: CMakeLists.txt  README.MD
nibbles-01/assets/: assets.md
nibbles-01/headers/: engine.hpp
nibbles-01/src/: draw.cpp  engine.cpp  input.cpp
nibbles-02/: CMakeLists.txt
nibbles-02/cmake_modules/: FindSFML.cmake
nibbles-02/headers/: engine.hpp
nibbles-02/src/: draw.cpp  engine.cpp  input.cpp  main.cpp  update.cpp
nibbles-03/: CMakeLists.txt
nibbles-03/assets/levels/: levels.txt
nibbles-03/headers/: engine.hpp  snakesection.hpp
nibbles-03/src/: apple.cpp  draw.cpp  engine.cpp  input.cpp  snakesection.cpp  update.cpp
nibbles-04/: CMakeLists.txt
nibbles-04/headers/: apple.hpp  engine.hpp  wall.hpp
nibbles-04/src/: engine.cpp  update.cpp
nibbles-Homework/: CMakeLists.txt  HOMEWORK.MD
nibbles-Homework/headers/: apple.hpp  engine.hpp  snakesection.hpp  wall.hpp
nibbles-Homework/src/: apple.cpp  draw.cpp  engine.cpp  input.cpp  snakesection.cpp  update.cpp  wall.cpp
